# python-project-83

./: .gitignore  Makefile  README.md  database.sql  makefile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: app_check.yaml
page_analyzer/: __init__.py  app.py  db.py  utils.py  validator.py
page_analyzer/templates/: base.html  check.html  checks.html  error404.html  error500.html  index.html  url_page.html  urls.html
